--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    volumes:
+      -./backend:/app
     ports:
       - "8080:8080"
     networks:
@@ -14,6 +16,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80"
+    volumes:
+      -./frontend/dist/:/usr/share/nginx/html
     networks:
       - webrtc-net
 networks:
